Fix new tab button (broken when removing pre-MD code).

BUG=653905

Review-Url: https://codereview.chromium.org/2401423004
Cr-Commit-Position: refs/heads/master@{#424230}

Former-commit-id: 434b901825d725fb21e7a98ab2f27b128c504159